--- a/ARKFUTURE/inspircd/inspircd.conf
+++ b/ARKFUTURE/inspircd/inspircd.conf
@@ -1,4 +1,4 @@
-#inspircd<0.1> -- UTF-8 --INSPIRCD v3
+#inspircd<0.1> -- UTF-8 --INSPIRCD v4
 # 这只是一个或多或少可以使用的配置文件示例,此配置为ARKFUTURE-IRC使用
 # ARKFUTURE翻译,使用UTF-8编码
 # 添加部分说明,并完善主要功能,需要自行定制
@@ -9,7 +9,7 @@
 ###我们尽可能少用 "#" 来注释说明,因为这样可以使得下面的文档变得美观 
 # 您可以在以下文档中查询详细配置来完善此配置
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
-# 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/3/configuration
+# 以及官方的InspIRCd文档(更详细的) https://docs.inspircd.org/4/configuration
 # 进行详细配置
 
 
@@ -22,7 +22,7 @@
       runtimedir="&dir.runtime;">
 # <define> 标记允许您定义 XML 样式的实体(定义服务器变量)
 <define name="ConfPath"
-        value="&dir.config;/conf/">
+        value="&dir.config;/conf">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -36,9 +36,9 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次. 
-<admin name="arkfutureadmin"
-       nick="arkfutureadmin"
+#<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
+<admin name="ARKFUTURE-IRC/WG"
+       description="Server admin|服务器超级管理"
        email="ADMIN@ARKFUTURE.CN">
 
 
@@ -48,6 +48,7 @@
 <bind address=""
       port="6667-6669"
       type="clients"
+      defer="0s"
       free="yes">
 
 
@@ -58,11 +59,11 @@
          allow="*"
          commandrate="1000"
          fakelag="yes"
-         globalmax="3"
+         globalmax="0"
          hardsendq="262144"
-         limit="5000"
-         localmax="3"
-         maxchans="30"
+         limit=""
+         localmax="0"
+         maxchans=""
          maxconnwarn="no"
          pingfreq="2m"
          recvq="8K"
@@ -83,6 +84,7 @@
 #<class>标签定义了一组服务器操作员特权.此标记可以根据需要定义多次
 <class name="Shutdown"
        commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE">
+       #privs="channels/auspex servers/auspex users/auspex users/channel-spy users/flood/increased-buffers users/flood/no-fakelag users/flood/no-throttle users/mass-message">
 <class name="SACommands" 
        commands="SAJOIN SAPART SANICK SAQUIT SATOPIC SAKICK SAMODE OJOIN">
 <class name="ServerLink"
@@ -94,19 +96,22 @@
 <class name="HostCloak"
        commands="SETHOST SETIDENT CHGNAME CHGHOST CHGIDENT">
 
-#<type>标签定义了服务器操作员的类型.此标记可以根据需要定义多次. 
+#<type>标签定义了服务器操作员的类型.此标记可以根据需要定义多次.
 # 这里必要的话请限制登录主机 "host" 字段
 <type name="NetAdmin"
-       classes="OperChat BanControl HostCloak Shutdown ServerLink"
+       classes="OperChat SACommands BanControl HostCloak Shutdown ServerLink"
        host=""
+       autologin="strict"
        vhost="iadm.arkfuture.cn">
 <type name="GlobalOp"
        classes="OperChat BanControl HostCloak ServerLink"
        host=""
+       autologin="strict"
        vhost="igop.arkfuture.cn">
 <type name="Helper"
        classes="HostCloak"
        host=""
+       autologin="strict"
        vhost="ihep.arkfuture.cn">
 
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
@@ -135,36 +140,36 @@
 #<pid>标签定义了pid文件的位置.此标记只能定义一次.
 <pid file="/var/run/inspircd/inspircd.pid">
 
-# 关机&重启的密码
-<power diepass="P03iZjRtmpqXPv3" restartpass="P03iZjRtmpqXPv3">
-
-## 最用户及最大操作员
-<channels users=""
-          opers="">
-
 
 #-#-#-#-#-#-#-#-#-#-#-#-#-服务器选项-#-#-#-#-#-#-#-#-#-#-#-#-#
-#<options>标签定义了常规配置选项.此标记只能定义一次.
-<options prefixquit="Quit: "
-         syntaxhints="no"
-         announcets="yes"
-         hostintopic="yes"
-         pingwarning="15"
-         splitwhois="splitmsg"
+#<options>标签定义了常规配置选项.此标记只能定义一次.(v4更改！)
+<options cyclehostsfromuser="no"
+         defaultbind="auto"
+         defaultmodes="nost"
          exemptchanops=""
-         xlinemessage="您被禁止,联系电子邮件 ADMIN@ARKFUTURE.CN 获取帮助"
-         nosnoticestack="yes"
-         defaultbind="auto">
+         extbanformat="name"
+         fixedpart=""
+         fixedquit=""
+         hostintopic="yes"
+         invitebypassmodes="yes"
+         nosnoticestack="no"
+         modesinlist="no"
+         prefixpart="&quot;"
+         prefixquit="Quit: "
+         splitwhois="no"
+         suffixpart="&quot;"
+         suffixquit=""
+         syntaxhints="yes"
+         xlinemessage="您被禁止,联系电子邮件 ADMIN@ARKFUTURE.CN 获取帮助">
+
 
 
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
 #此配置参照(基于)官方文档修改,可自行修改
-<security allowcoreunload="no"
-          announceinvites="dynamic"
+<security announceinvites="dynamic"
           customversion="ARKFUTURE-IRC"
           genericoper="no"
-          hidebans="yes"
           hidekills=""
           hideserver="ARKFUTURE-IRC"
           hideulinekills="yes"
@@ -172,9 +177,6 @@
           restrictbannedusers="yes"
           runasgroup=""
           runasuser=""
-          flatlinks="no"
-          hidesplits="no"
-          hideulines="no"
           userstats="Pu"
           maphide="https://arkfuture.cn/#IRC">
 
@@ -200,23 +202,26 @@
 <limits maxaway="200"
         maxchan="60"
         maxhost="70"
-        maxident="10"
+        maxkey="30"
         maxkick="300"
         maxmodes="20"
         maxnick="30"
         maxquit="300"
         maxreal="130"
-        maxtopic="330">
-#maxaway:away消息的最大长度
-#maxchan:通道名称的最大长度
-#maxhost:主机名的最大长度
-#maxident:标识/用户名的最大长度
-#maxkick:kick消息的最大长度
-#maxmodes:每行模式更改的最大次数
-#maxnick:昵称的最大长度
-#maxquit:退出消息的最大长度
-#maxreal:实名的最大长度
-#maxtopic:频道主题的最大长度
+        maxtopic="330"
+        maxuser="10">
+#maxaway =离开消息的最大长度.
+#maxchan =频道名称的最大长度.
+#maxhost =主机名的最大长度.
+#maxkey =通道键的最大长度.
+#maxkick =kick消息的最大长度.
+#maxmodes =在单个MODE消息中可以更改的无标志模式的最大数量.
+#maxnick =昵称的最大长度.
+#maxquit =退出消息的最大长度.
+#maxreal =真实的名称的最大长度 (gecos).
+#maxtopic =频道主题的最大长度.
+#maxuser =用户名的最大长度.
+
 
 #<insane>标记定义了限制,以防止创建过宽的X线.此标记只能定义一次.
 <insane hostmasks="no"
@@ -225,238 +230,196 @@
         trigger="95.5">
 
 #<badnick>标签定义了永久Q线.此标记可以根据需要定义多次.
-<badnick nick="ChanServ" reason="Reserved For Services">
-<badnick nick="NickServ" reason="Reserved For Services">
-<badnick nick="OperServ" reason="Reserved For Services">
-<badnick nick="MemoServ" reason="Reserved For Services">
+<badnick nick="ChanServ" reason="为网络服务保留">
+<badnick nick="NickServ" reason="为网络服务保留">
+<badnick nick="OperServ" reason="为网络服务保留">
+<badnick nick="MemoServ" reason="为网络服务保留">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#MOD(模组)#-#-#-#-#-#-#-#-#-#-#-#
-# 请阅读https://docs.inspircd.org/3/modules/
-# 其他模块配置请自行修改使用
-# 我们使用:导入MOD后立即跟MOD配置文件 的方式配置
-
-# 示例:
-# <module name="模块名">
-# 模块配置
-
-######禁用模块
-# <module name="globalload"> 管理员重载/卸载模块的模块,非必要不装
-# <module name="ldapauth">
-# <module name="ldapoper">
-# <module name="sqlauth">
-# <module name="sqloper">
-# <module name="xline_db">
-# <module name="codepage">
+# 请阅读https://docs.inspircd.org/4/modules/
+# 我们的配置只能保证您的服务器不报错可以基础使用,若您需要其他模块配置请自行修改使用
 
 ######TLS/SSL模块(请看官网说明,使用时需要自行删除#)
 #<include file="&ConfPath;/ssl.conf">
 
 ######启用模块
-<module name="sasl">
+<module name="abbreviation">
+<module name="account">
+<module name="alias">
+<module name="allowinvite">
 <module name="alltime">
-<module name="blockcolor">
+<module name="anticaps">
+<module name="auditorium">
+<module name="autoop">
+<module name="banexception">
+<module name="banredirect">
+<module name="bcrypt">
 <module name="blockamsg">
+<module name="blockcolor">
 <module name="botmode">
-<botmode forcenotice="no">
-<module name="cap">
 <module name="callerid">
+<module name="cap">
+<module name="cban">
 <module name="chancreate">
+<module name="chanfilter">
 <module name="chanhistory">
-<chanhistory bots="yes"
-             enableumode="yes"
-             maxlines="50"
-             prefixmsg="yes">
+<module name="chanlog">
+<module name="channames">
+<module name="channelban">
 <module name="check">
+<module name="chghost">
+<module name="chgident">
+<module name="chgname">
+<module name="classban">
 <module name="clearchan">
-<module name="cloaking">
-<cloak mode="full"
-       key="PO3ZF0hD2NA2CSpXquBdrZW1I4S1O3ZF52NA2CS"
-       prefix="AFE-"
-       suffix="-EFA"
-       ignorecase="yes">
+<module name="cloak">
+#此模块将被弃用<module name="cloak_md5">
+<module name="cloak_sha256">
+<module name="cloak_static">
+<module name="cloak_user">
+<module name="codepage">
+<module name="commonchans">
+<module name="conn_join">
+<module name="conn_umodes">
+<module name="conn_waitpong">
+<module name="connectban">
+<module name="connflood">
+<module name="customprefix">
+<module name="customtitle">
+<module name="cycle">
 <module name="dccallow">
-<banfile action="allow"
-         pattern="*">
-<dccallow action="allow"
-          blockchat="no"
-          length="0"
-          maxentries="20">
+<module name="deaf">
+<module name="delayjoin">
+<module name="delaymsg">
+<module name="denychans">
+<module name="disable">
+<module name="dnsbl">
+<module name="exemptchanops">
+<module name="filter">
+<module name="gateway">
+<module name="geoban">
+<module name="geoclass">
+#<module name="globalload">
+<module name="globops">
+<module name="haproxy">
+<module name="help">
+<module name="helpmode">
+<module name="hidechans">
+<module name="hidelist">
+<module name="hidemode">
+<module name="hideoper">
+<module name="hostcycle">
+#<module name="httpd">
+#<module name="httpd_acl">
+#<module name="httpd_config">
+#<module name="httpd_stats">
+<module name="ident">
+<module name="inviteexception">
 <module name="ircv3">
-<ircv3 accountnotify="yes"
-       awaynotify="yes"
-       extendedjoin="yes"
-       standardreplies="yes">
 <module name="ircv3_accounttag">
 <module name="ircv3_batch">
 <module name="ircv3_capnotify">
 <module name="ircv3_chghost">
+<module name="ircv3_ctctags">
 <module name="ircv3_echomessage">
 <module name="ircv3_invitenotify">
 <module name="ircv3_labeledresponse">
-<module name="ircv3_ctctags">
-<ctctags allowclientonlytags="yes">
 <module name="ircv3_msgid">
 <module name="ircv3_servertime">
+#<module name="ircv3_sts">
 <module name="joinflood">
-<joinflood bootwait="30s"
-           duration="1m"
-           splitwait="30s">
 <module name="kicknorejoin">
+<module name="knock">
+#<module name="ldapauth">
+#<module name="ldapoper">
+<module name="log_sql">
 <module name="maphide">
 <module name="md5">
 <module name="messageflood">
-<messageflood notice="1.0"
-              privmsg="1.0"
-              tagmsg="0.2">
 <module name="monitor">
-<monitor maxentries="32">
-<module name="namesx">
+<module name="multiprefix">
+<module name="muteban">
+<module name="namedmodes">
+<module name="nickflood">
+<module name="nicklock">
 <module name="noctcp">
 <module name="nokicks">
 <module name="nonicks">
 <module name="nonotice">
-<module name="opermotd">
-<module name="password_hash">
-<mkpasswd operonly="no">
-<module name="redirect">
-<module name="randquote">
-<randquote file="quotes"
-           prefix=""
-           suffix="">
-<module name="regex_glob">
-<module name="saquit">
-<module name="servprotect">
-<module name="sha1">
-<module name="sha256">
-<module name="showfile">
-<showfile name="RULES"
-          file="rules"
-          introtext="服务器规则:"
-          endtext="服务器规则结束.">
-<module name="stripcolor">
-<module name="uhnames">
-<module name="watch">
-<watch maxwatch="32">
-<module name="uninvite">
-<module name="channelban">
-<module name="rmode">
-<module name="serverban">
-<module name="cban">
-<cban glob="yes">
-<module name="hideoper">
-<module name="hostcycle">
-<module name="nickflood">
-<nickflood duration="60s">
-<module name="operchans">
-<module name="operlog">
-<module name="hidechans">
-<module name="services_account">
-<module name="spanningtree">
-<module name="sasl">
-<sasl requiressl="no"
-      target="localhost">
-<module name="autoop">
-<module name="knock">
-<knock notify="notice">
-<module name="inviteexception">
-<inviteexception bypasskey="yes">
-<module name="helpop">
-<helpmsg nohelp="您搜索的主题没有任何帮助.请再试一次.">
-<include file="&ConfPath;/helpop.conf">
-<module name="geoclass">
-<module name="exemptchanops">
-<module name="sslmodes">
-<module name="starttls">
-<module name="sslinfo">
-<module name="operprefix">
-<operprefix prefix="!">
 <module name="ojoin">
-<module name="customprefix">
-<module name="conn_umodes">
-<module name="conn_join">
-<module name="cycle">
-<module name="globops">
-<module name="namedmodes">
-<module name="muteban">
-<module name="nicklock">
-<module name="remove">
-<module name="rline">
-<module name="sakick">
-<module name="sapart">
-<module name="samode">
-<module name="satopic">
-<module name="seenicks">
-<module name="cgiirc">
-<module name="chanlog">
-<module name="chancreate">
-<module name="abbreviation">
-<module name="alias">
-<module name="allowinvite">
-<module name="anticaps">
-<module name="auditorium">
-<module name="banexception">
-<module name="banredirect">
-<module name="bcrypt">
-<module name="filter">
-<module name="chanfilter">
-<module name="commonchans">
-<module name="conn_waitpong">
-<module name="connectban">
-<connectban threshold=""
-            banmessage="您的IP范围在太短的时间内尝试连接太多次.稍等片刻,您将能够连接."
-            banduration="15s"
-            ipv4cidr="32"
-            ipv6cidr="128"
-            bootwait="10s"
-            splitwait="10s">
-<module name="connflood">
-<module name="customtitle">
-<module name="denychans">
-<module name="disable">
-<module name="dnsbl">
-<module name="geoclass">
-<module name="geoban">
-<module name="haproxy">
-<module name="ident">
+<module name="operchans">
+<module name="operjoin">
+<module name="operlevels">
+<module name="operlog">
+<module name="opermodes">
+<module name="opermotd">
+<module name="operprefix">
+<module name="opmoderated">
 <module name="override">
 <module name="passforward">
+<module name="password_hash">
 <module name="pbkdf2">
 <module name="permchannels">
-<permchanneldb filename="&ConfPath;/permchannels.conf"
-               listmodes="yes"
-               operonly="yes"
-               saveperiod="5s">
+<module name="randquote">
+<module name="realnameban">
+<module name="redirect">
+<module name="regex_glob">
+<module name="regex_stdlib">
+<module name="remove">
+<module name="repeat">
+<module name="restrictchans">
+<module name="restrictmsg">
+<module name="rline">
+<module name="rmode">
+<module name="sajoin">
+<module name="sakick">
+<module name="samode">
+<module name="sanick">
+<module name="sapart">
+<module name="saquit">
+<module name="sasl">
+<module name="satopic">
+<module name="securelist">
+<module name="seenicks">
 <module name="serverban">
+<module name="services">
 <module name="sethost">
+<module name="setident">
 <module name="setidle">
 <module name="setname">
+<module name="sha1">
+<module name="sha2">
+<module name="showfile">
 <module name="showwhois">
+<module name="shun">
 <module name="silence">
+<module name="spanningtree">
+#<module name="sqlauth">
+#<module name="sqloper">
+<module name="sslinfo">
+<module name="sslmodes">
+<module name="starttls">
+<module name="stripcolor">
+<module name="swhois">
+<module name="timedbans">
+<module name="tline">
+<module name="uhnames">
+<module name="uninvite">
 <module name="vhost">
 <module name="watch">
-<module name="topiclock">
-<module name="sajoin">
-<module name="operlevels">
-<module name="opermodes">
-<module name="swhois">
-<module name="tline">
-<module name="timedbans">
-<module name="shun">
-<module name="svshold">
-<module name="securelist">
-<module name="operjoin">
-<operjoin channel="#OP_OP"
-          override="yes">
-<module name="mlock">
-<module name="hidemode">
-<module name="hidelist">
-<module name="gecosban">
-<module name="chgident">
-<module name="chgname">
-<module name="classban">
-<module name="channames">
-<module name="clones">
-<module name="hostchange">
-<module name="nopartmsg">
-<module name="userip">
+#<module name="websocket">
+<module name="xline_db">
+
+######配置模块
+#我们加载了可以使用的所有模块,部分模块没有正确配置会报错,报错的我们会及时注释掉,不影响正常使用
+#由于INSPIRCDv4的模块复杂性,我们引入一个模块配置文件,单独存放模块的配置,模块配置为基础配置,其目的是不报错可以正常使用
+#请自行修改为自己的配置使用
+<include file="&ConfPath;/modulesconf.conf">
+
+#-#-#-#-#-#-#-#-#-#-#-#-#LOG(日志)#-#-#-#-#-#-#-#-#-#-#-#
+<log method="file"
+     type="*"
+     level="normal"
+     target="&ConfPath;/ircd.log"
+     flush="1000">
