--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -23,6 +23,8 @@
 # <define> 标记允许您定义 XML 样式的实体(定义服务器变量)
 <define name="ConfPath"
         value="&dir.config;/conf">
+<define name="TxtPath"
+        value="&dir.config;/txt">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -125,10 +127,10 @@
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
 #部分命令如果没有权限就停止使用<files>标签
 #使用时请注释其中一个标签
-<files motd="&ConfPath;/motd.txt"
-       opermotd="&ConfPath;/opermotd.txt"
-       quotes="&ConfPath;/quotes.txt"
-       rules="&ConfPath;/rules.txt">
+<files motd="&TxtPath;/motd.txt"
+       opermotd="&TxtPath;/opermotd.txt"
+       quotes="&TxtPath;/quotes.txt"
+       rules="&TxtPath;/rules.txt">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
