--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -240,184 +240,182 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-#MOD(模组)#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读https://docs.inspircd.org/4/modules/
-# 我们的配置只能保证您的服务器不报错可以基础使用,若您需要其他模块配置请自行修改使用
+# 官方网站MODULES页面下普通模块
 
-######TLS/SSL模块(请看官网说明,使用时需要自行删除#)
-#<include file="&ConfPath;/ssl.conf">
 
 ######启用模块
-<module name="abbreviation">
-<module name="account">
-<module name="alias">
-<module name="allowinvite">
-<module name="alltime">
-<module name="anticaps">
-<module name="auditorium">
-<module name="autoop">
-<module name="banexception">
-<module name="banredirect">
-<module name="bcrypt">
-<module name="blockamsg">
-<module name="blockcolor">
-<module name="botmode">
-<module name="callerid">
-<module name="cap">
-<module name="cban">
-<module name="chancreate">
-<module name="chanfilter">
-<module name="chanhistory">
-<module name="chanlog">
-<module name="channames">
-<module name="channelban">
-<module name="check">
-<module name="chghost">
-<module name="chgident">
-<module name="chgname">
-<module name="classban">
-<module name="clearchan">
-<module name="cloak">
+#<module name="abbreviation">
+#<module name="account">
+#<module name="alias">
+#<module name="allowinvite">
+#<module name="alltime">
+#<module name="anticaps">
+#<module name="auditorium">
+#<module name="autoop">
+#<module name="banexception">
+#<module name="banredirect">
+#<module name="bcrypt">
+#<module name="blockamsg">
+#<module name="blockcolor">
+#<module name="botmode">
+#<module name="callerid">
+#<module name="cap">
+#<module name="cban">
+#<module name="chancreate">
+#<module name="chanfilter">
+#<module name="chanhistory">
+#<module name="chanlog">
+#<module name="channames">
+#<module name="channelban">
+#<module name="check">
+#<module name="chghost">
+#<module name="chgident">
+#<module name="chgname">
+#<module name="classban">
+#<module name="clearchan">
+#<module name="cloak">
 #此模块将被弃用<module name="cloak_md5">
-<module name="cloak_sha256">
-<module name="cloak_static">
-<module name="cloak_user">
-<module name="codepage">
-<module name="commonchans">
-<module name="conn_join">
-<module name="conn_umodes">
-<module name="conn_waitpong">
-<module name="connectban">
-<module name="connflood">
-<module name="customprefix">
-<module name="customtitle">
-<module name="cycle">
-<module name="dccallow">
-<module name="deaf">
-<module name="delayjoin">
-<module name="delaymsg">
-<module name="denychans">
-<module name="disable">
-<module name="dnsbl">
-<module name="exemptchanops">
-<module name="filter">
-<module name="gateway">
-<module name="geoban">
-<module name="geoclass">
+#<module name="cloak_sha256">
+#<module name="cloak_static">
+#<module name="cloak_user">
+#<module name="codepage">
+#<module name="commonchans">
+#<module name="conn_join">
+#<module name="conn_umodes">
+#<module name="conn_waitpong">
+#<module name="connectban">
+#<module name="connflood">
+#<module name="customprefix">
+#<module name="customtitle">
+#<module name="cycle">
+#<module name="dccallow">
+#<module name="deaf">
+#<module name="delayjoin">
+#<module name="delaymsg">
+#<module name="denychans">
+#<module name="disable">
+#<module name="dnsbl">
+#<module name="exemptchanops">
+#<module name="filter">
+#<module name="gateway">
+#<module name="geoban">
+#<module name="geoclass">
 #<module name="globalload">
-<module name="globops">
-<module name="haproxy">
-<module name="help">
-<module name="helpmode">
-<module name="hidechans">
-<module name="hidelist">
-<module name="hidemode">
-<module name="hideoper">
-<module name="hostcycle">
+#<module name="globops">
+#<module name="haproxy">
+#<module name="help">
+#<module name="helpmode">
+#<module name="hidechans">
+#<module name="hidelist">
+#<module name="hidemode">
+#<module name="hideoper">
+#<module name="hostcycle">
 #<module name="httpd">
 #<module name="httpd_acl">
 #<module name="httpd_config">
 #<module name="httpd_stats">
-<module name="ident">
-<module name="inviteexception">
-<module name="ircv3">
-<module name="ircv3_accounttag">
-<module name="ircv3_batch">
-<module name="ircv3_capnotify">
-<module name="ircv3_chghost">
-<module name="ircv3_ctctags">
-<module name="ircv3_echomessage">
-<module name="ircv3_invitenotify">
-<module name="ircv3_labeledresponse">
-<module name="ircv3_msgid">
-<module name="ircv3_servertime">
+#<module name="ident">
+#<module name="inviteexception">
+#<module name="ircv3">
+#<module name="ircv3_accounttag">
+#<module name="ircv3_batch">
+#<module name="ircv3_capnotify">
+#<module name="ircv3_chghost">
+#<module name="ircv3_ctctags">
+#<module name="ircv3_echomessage">
+#<module name="ircv3_invitenotify">
+#<module name="ircv3_labeledresponse">
+#<module name="ircv3_msgid">
+#<module name="ircv3_servertime">
 #<module name="ircv3_sts">
-<module name="joinflood">
-<module name="kicknorejoin">
-<module name="knock">
+#<module name="joinflood">
+#<module name="kicknorejoin">
+#<module name="knock">
 #<module name="ldapauth">
 #<module name="ldapoper">
-<module name="log_sql">
-<module name="maphide">
-<module name="md5">
-<module name="messageflood">
-<module name="monitor">
-<module name="multiprefix">
-<module name="muteban">
-<module name="namedmodes">
-<module name="nickflood">
-<module name="nicklock">
-<module name="noctcp">
-<module name="nokicks">
-<module name="nonicks">
-<module name="nonotice">
-<module name="ojoin">
-<module name="operchans">
-<module name="operjoin">
-<module name="operlevels">
-<module name="operlog">
-<module name="opermodes">
-<module name="opermotd">
-<module name="operprefix">
-<module name="opmoderated">
-<module name="override">
-<module name="passforward">
-<module name="password_hash">
-<module name="pbkdf2">
-<module name="permchannels">
-<module name="randquote">
-<module name="realnameban">
-<module name="redirect">
-<module name="regex_glob">
-<module name="regex_stdlib">
-<module name="remove">
-<module name="repeat">
-<module name="restrictchans">
-<module name="restrictmsg">
-<module name="rline">
-<module name="rmode">
-<module name="sajoin">
-<module name="sakick">
-<module name="samode">
-<module name="sanick">
-<module name="sapart">
-<module name="saquit">
-<module name="sasl">
-<module name="satopic">
-<module name="securelist">
-<module name="seenicks">
-<module name="serverban">
-<module name="services">
-<module name="sethost">
-<module name="setident">
-<module name="setidle">
-<module name="setname">
-<module name="sha1">
-<module name="sha2">
-<module name="showfile">
-<module name="showwhois">
-<module name="shun">
-<module name="silence">
-<module name="spanningtree">
+#<module name="log_sql">
+#<module name="maphide">
+#<module name="md5">
+#<module name="messageflood">
+#<module name="monitor">
+#<module name="multiprefix">
+#<module name="muteban">
+#<module name="namedmodes">
+#<module name="nickflood">
+#<module name="nicklock">
+#<module name="noctcp">
+#<module name="nokicks">
+#<module name="nonicks">
+#<module name="nonotice">
+#<module name="ojoin">
+#<module name="operchans">
+#<module name="operjoin">
+#<module name="operlevels">
+#<module name="operlog">
+#<module name="opermodes">
+#<module name="opermotd">
+#<module name="operprefix">
+#<module name="opmoderated">
+#<module name="override">
+#<module name="passforward">
+#<module name="password_hash">
+#<module name="pbkdf2">
+#<module name="permchannels">
+#<module name="randquote">
+#<module name="realnameban">
+#<module name="redirect">
+#<module name="regex_glob">
+#<module name="regex_stdlib">
+#<module name="remove">
+#<module name="repeat">
+#<module name="restrictchans">
+#<module name="restrictmsg">
+#<module name="rline">
+#<module name="rmode">
+#<module name="sajoin">
+#<module name="sakick">
+#<module name="samode">
+#<module name="sanick">
+#<module name="sapart">
+#<module name="saquit">
+#<module name="sasl">
+#<module name="satopic">
+#<module name="securelist">
+#<module name="seenicks">
+#<module name="serverban">
+#<module name="services">
+#<module name="sethost">
+#<module name="setident">
+#<module name="setidle">
+#<module name="setname">
+#<module name="sha1">
+#<module name="sha2">
+#<module name="showfile">
+#<module name="showwhois">
+#<module name="shun">
+#<module name="silence">
+#<module name="spanningtree">
 #<module name="sqlauth">
 #<module name="sqloper">
-<module name="sslinfo">
-<module name="sslmodes">
-<module name="starttls">
-<module name="stripcolor">
-<module name="swhois">
-<module name="timedbans">
-<module name="tline">
-<module name="uhnames">
-<module name="uninvite">
-<module name="vhost">
-<module name="watch">
+#<module name="sslinfo">
+#<module name="sslmodes">
+#<module name="starttls">
+#<module name="stripcolor">
+#<module name="swhois">
+#<module name="timedbans">
+#<module name="tline">
+#<module name="uhnames">
+#<module name="uninvite">
+#<module name="vhost">
+#<module name="watch">
 #<module name="websocket">
-<module name="xline_db">
+#<module name="xline_db">
 
-######配置模块
-#我们加载了可以使用的所有模块,部分模块没有正确配置会报错,报错的我们会及时注释掉,不影响正常使用
-#由于INSPIRCDv4的模块复杂性,我们引入一个模块配置文件,单独存放模块的配置,模块配置为基础配置,其目的是不报错可以正常使用
-#请自行修改为自己的配置使用
-<include file="&ConfPath;/modulesconf.conf">
+######模块配置
+#<include file="&ConfPath;/modulesconf.conf">
+
+######TLS/SSL模块
+#<include file="&ConfPath;/ssl.conf">
 
 #-#-#-#-#-#-#-#-#-#-#-#-#LOG(日志)#-#-#-#-#-#-#-#-#-#-#-#
 <log method="file"
