--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -41,7 +41,7 @@
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
 <admin name="ARKFUTURE-IRC/WG"
        description="Server admin|服务器超级管理"
-       email="ADMIN@ARKFUTURE.CN">
+       email="">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -130,7 +130,9 @@
 <files motd="&TxtPath;/motd.txt"
        opermotd="&TxtPath;/opermotd.txt"
        quotes="&TxtPath;/quotes.txt"
-       rules="&TxtPath;/rules.txt">
+       rules="&TxtPath;/rules.txt"
+       permchannels="&ConfPath;/permchannels.conf"
+       xline="&ConfPath;/xline.db">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
@@ -162,7 +164,7 @@
          suffixpart="&quot;"
          suffixquit=""
          syntaxhints="yes"
-         xlinemessage="您被禁止,联系电子邮件 ADMIN@ARKFUTURE.CN 获取帮助">
+         xlinemessage="您被禁止,联系管理员 ARKFUTURE 获取帮助">
 
 
 
@@ -180,7 +182,7 @@
           runasgroup=""
           runasuser=""
           userstats="Pu"
-          maphide="https://arkfuture.cn/#IRC">
+          maphide="">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
@@ -244,175 +246,338 @@
 
 
 ######启用模块
-#<module name="abbreviation">
-#<module name="account">
-#<module name="alias">
-#<module name="allowinvite">
-#<module name="alltime">
-#<module name="anticaps">
-#<module name="auditorium">
-#<module name="autoop">
-#<module name="banexception">
-#<module name="banredirect">
-#<module name="bcrypt">
-#<module name="blockamsg">
-#<module name="blockcolor">
-#<module name="botmode">
-#<module name="callerid">
-#<module name="cap">
-#<module name="cban">
-#<module name="chancreate">
-#<module name="chanfilter">
-#<module name="chanhistory">
-#<module name="chanlog">
-#<module name="channames">
-#<module name="channelban">
-#<module name="check">
-#<module name="chghost">
-#<module name="chgident">
-#<module name="chgname">
-#<module name="classban">
-#<module name="clearchan">
-#<module name="cloak">
+<module name="abbreviation">
+<module name="account">
+<module name="alias">
+<module name="allowinvite">
+<module name="alltime">
+<module name="anticaps">
+<module name="auditorium">
+<module name="autoop">
+<module name="banexception">
+<module name="banredirect">
+<module name="bcrypt">
+<module name="blockamsg">
+<module name="blockcolor">
+<module name="botmode">
+<module name="callerid">
+<module name="cap">
+<module name="cban">
+<module name="chancreate">
+<module name="chanfilter">
+<module name="chanhistory">
+<module name="chanlog">
+<module name="channames">
+<module name="channelban">
+<module name="check">
+<module name="chghost">
+<module name="chgident">
+<module name="chgname">
+<module name="classban">
+<module name="clearchan">
+<module name="cloak">
 #此模块将被弃用<module name="cloak_md5">
-#<module name="cloak_sha256">
-#<module name="cloak_static">
-#<module name="cloak_user">
-#<module name="codepage">
-#<module name="commonchans">
-#<module name="conn_join">
-#<module name="conn_umodes">
-#<module name="conn_waitpong">
-#<module name="connectban">
-#<module name="connflood">
-#<module name="customprefix">
-#<module name="customtitle">
-#<module name="cycle">
-#<module name="dccallow">
-#<module name="deaf">
-#<module name="delayjoin">
-#<module name="delaymsg">
-#<module name="denychans">
-#<module name="disable">
-#<module name="dnsbl">
-#<module name="exemptchanops">
-#<module name="filter">
-#<module name="gateway">
-#<module name="geoban">
-#<module name="geoclass">
-#<module name="globalload">
-#<module name="globops">
-#<module name="haproxy">
-#<module name="help">
-#<module name="helpmode">
-#<module name="hidechans">
-#<module name="hidelist">
-#<module name="hidemode">
-#<module name="hideoper">
-#<module name="hostcycle">
+<module name="cloak_sha256">
+<module name="cloak_static">
+<module name="cloak_user">
+<module name="codepage">
+<module name="commonchans">
+<module name="conn_join">
+<module name="conn_umodes">
+<module name="conn_waitpong">
+<module name="connectban">
+<module name="connflood">
+<module name="customprefix">
+<module name="customtitle">
+<module name="cycle">
+<module name="dccallow">
+<module name="deaf">
+<module name="delayjoin">
+<module name="delaymsg">
+<module name="denychans">
+<module name="disable">
+<module name="dnsbl">
+<module name="exemptchanops">
+<module name="filter">
+<module name="gateway">
+<module name="geoban">
+<module name="geoclass">
+<module name="globalload">
+<module name="globops">
+<module name="haproxy">
+<module name="help">
+<module name="helpmode">
+<module name="hidechans">
+<module name="hidelist">
+<module name="hidemode">
+<module name="hideoper">
+<module name="hostcycle">
 #<module name="httpd">
 #<module name="httpd_acl">
 #<module name="httpd_config">
 #<module name="httpd_stats">
-#<module name="ident">
-#<module name="inviteexception">
-#<module name="ircv3">
-#<module name="ircv3_accounttag">
-#<module name="ircv3_batch">
-#<module name="ircv3_capnotify">
-#<module name="ircv3_chghost">
-#<module name="ircv3_ctctags">
-#<module name="ircv3_echomessage">
-#<module name="ircv3_invitenotify">
-#<module name="ircv3_labeledresponse">
-#<module name="ircv3_msgid">
-#<module name="ircv3_servertime">
+<module name="ident">
+<module name="inviteexception">
+<module name="ircv3">
+<module name="ircv3_accounttag">
+<module name="ircv3_batch">
+<module name="ircv3_capnotify">
+<module name="ircv3_chghost">
+<module name="ircv3_ctctags">
+<module name="ircv3_echomessage">
+<module name="ircv3_invitenotify">
+<module name="ircv3_labeledresponse">
+<module name="ircv3_msgid">
+<module name="ircv3_servertime">
 #<module name="ircv3_sts">
-#<module name="joinflood">
-#<module name="kicknorejoin">
-#<module name="knock">
+<module name="joinflood">
+<module name="kicknorejoin">
+<module name="knock">
 #<module name="ldapauth">
 #<module name="ldapoper">
 #<module name="log_sql">
-#<module name="maphide">
-#<module name="md5">
-#<module name="messageflood">
-#<module name="monitor">
-#<module name="multiprefix">
-#<module name="muteban">
-#<module name="namedmodes">
-#<module name="nickflood">
-#<module name="nicklock">
-#<module name="noctcp">
-#<module name="nokicks">
-#<module name="nonicks">
-#<module name="nonotice">
-#<module name="ojoin">
-#<module name="operchans">
-#<module name="operjoin">
-#<module name="operlevels">
-#<module name="operlog">
-#<module name="opermodes">
-#<module name="opermotd">
-#<module name="operprefix">
-#<module name="opmoderated">
-#<module name="override">
-#<module name="passforward">
-#<module name="password_hash">
-#<module name="pbkdf2">
-#<module name="permchannels">
-#<module name="randquote">
-#<module name="realnameban">
-#<module name="redirect">
-#<module name="regex_glob">
-#<module name="regex_stdlib">
-#<module name="remove">
-#<module name="repeat">
-#<module name="restrictchans">
-#<module name="restrictmsg">
-#<module name="rline">
-#<module name="rmode">
-#<module name="sajoin">
-#<module name="sakick">
-#<module name="samode">
-#<module name="sanick">
-#<module name="sapart">
-#<module name="saquit">
-#<module name="sasl">
-#<module name="satopic">
-#<module name="securelist">
-#<module name="seenicks">
-#<module name="serverban">
-#<module name="services">
-#<module name="sethost">
-#<module name="setident">
-#<module name="setidle">
-#<module name="setname">
-#<module name="sha1">
-#<module name="sha2">
-#<module name="showfile">
-#<module name="showwhois">
-#<module name="shun">
-#<module name="silence">
-#<module name="spanningtree">
+<module name="maphide">
+<module name="md5">
+<module name="messageflood">
+<module name="monitor">
+<module name="multiprefix">
+<module name="muteban">
+<module name="namedmodes">
+<module name="nickflood">
+<module name="nicklock">
+<module name="noctcp">
+<module name="nokicks">
+<module name="nonicks">
+<module name="nonotice">
+<module name="ojoin">
+<module name="operchans">
+<module name="operjoin">
+<module name="operlevels">
+<module name="operlog">
+<module name="opermodes">
+<module name="opermotd">
+<module name="operprefix">
+<module name="opmoderated">
+<module name="override">
+<module name="passforward">
+<module name="password_hash">
+<module name="pbkdf2">
+<module name="permchannels">
+<module name="randquote">
+<module name="realnameban">
+<module name="redirect">
+<module name="regex_glob">
+<module name="regex_stdlib">
+<module name="remove">
+<module name="repeat">
+<module name="restrictchans">
+<module name="restrictmsg">
+<module name="rline">
+<module name="rmode">
+<module name="sajoin">
+<module name="sakick">
+<module name="samode">
+<module name="sanick">
+<module name="sapart">
+<module name="saquit">
+<module name="sasl">
+<module name="satopic">
+<module name="securelist">
+<module name="seenicks">
+<module name="serverban">
+<module name="services">
+<module name="sethost">
+<module name="setident">
+<module name="setidle">
+<module name="setname">
+<module name="sha1">
+<module name="sha2">
+<module name="showfile">
+<module name="showwhois">
+<module name="shun">
+<module name="silence">
+<module name="spanningtree">
 #<module name="sqlauth">
 #<module name="sqloper">
-#<module name="sslinfo">
-#<module name="sslmodes">
-#<module name="starttls">
-#<module name="stripcolor">
-#<module name="swhois">
-#<module name="timedbans">
-#<module name="tline">
-#<module name="uhnames">
-#<module name="uninvite">
-#<module name="vhost">
-#<module name="watch">
+<module name="sslinfo">
+<module name="sslmodes">
+<module name="starttls">
+<module name="stripcolor">
+<module name="swhois">
+<module name="timedbans">
+<module name="tline">
+<module name="uhnames">
+<module name="uninvite">
+<module name="vhost">
+<module name="watch">
 #<module name="websocket">
-#<module name="xline_db">
+<module name="xline_db">
 
 ######模块配置
-#<include file="&ConfPath;/modulesconf.conf">
+<auditorium opcansee="no"
+            opvisible="no"
+            opercansee="yes">
+<bcrypt rounds="10">
+<blockamsg delay="5s"
+           action="killopers">
+<botmode forcenotice="no">
+<callerid cooldown="10"
+          maxaccepts="30"
+          tracknick="no">
+<chanfilter hidemask="no"
+            notifyuser="yes"
+            maxlen="50">
+<chanhistory bots="yes"
+             enableumode="yes"
+             maxduration="4w"
+             maxlines="50"
+             prefixmsg="yes">
+<chanlog channel=""
+         snomasks="">
+<channames allowrange=""
+           denyrange="">
+<codepage name="ASCII"
+          charset="ASCII">
+<cloak method="account"
+       class=""
+       invalidchar="strip"
+       prefix="AFE-"
+       suffix="-EFA">
+<hostname charmap="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.-_/0123456789">
+<autojoin channel=""
+          delay="30s">
+<waitpong killonbadreply="no"
+          sendsnotice="no">
+<connectban threshold=""
+            banmessage="您的IP范围在太短的时间内尝试连接太多次.稍等片刻,您将能够连接."
+            banduration="15s"
+            ipv4cidr="32"
+            ipv6cidr="128"
+            bootwait="10s"
+            splitwait="10s">
+<connflood bootwait=""
+           maxconns=""
+           period=""
+           timeout=""
+           quitmsg="">
+<banfile action="allow"
+         pattern="*">
+<dccallow action="allow"
+          blockchat="no"
+          length="0"
+          maxentries="20">
+<deaf bypasschars=""
+      servicebypasschars=""
+      privdeafservice="yes">
+<disabled fakenonexistent="no"
+          notifyopers="no"
+          commands=""
+          chanmodes=""
+          usermodes="">
+<filteropts engine=""
+            notifyuser="yes"
+            warnonselfmsg="no"
+            filename=""
+            saveperiod="5s"
+            backoff="2"
+            maxbackoff="5m">
+<hidechans affectsopers="no">
+<helpmsg nohelp="您搜索的主题没有任何帮助.请再试一次.">
+<include file="&ConfPath;/helpop.conf">
+<helpmode ignorehideoper="no"
+          markhelpers="yes">
+<hidechans affectsopers="no">
+<inviteexception bypasskey="yes">
+<ircv3 accountnotify="yes"
+       awaynotify="yes"
+       extendedjoin="yes"
+       standardreplies="yes">
+<ctctags allowclientonlytags="yes">
+<joinflood bootwait="30s"
+           duration="1m"
+           splitwait="30s">
+<knock notify="notice">
+<messageflood extended=""
+              message="消息泛滥 (触发了 %lines% 中的消息 %duration%)"
+              notice="1.0"
+              privmsg="1.0"
+              tagmsg="0.2">
+<monitor maxentries="32">
+<muteban notifyuser="yes">
+<nickflood duration="60s">
+<noctcp enableumode="no">
+<ojoin notice="yes"
+       op="yes"
+       prefix="!OP!">
+<operjoin channel="#OP_OP"
+          override="yes">
+<operlog tosnomask="no">
+<override noisy="no"
+          requirekey="no"
+          timeout="30m">
+<operprefix prefix="!OP!">
+<passforward cmd="SQUERY %nickrequired% :IDENTIFY %nick% %pass%"
+             forwardmsg="通知 %nick% :*** 将PASS转发到 %nickrequired%"
+             nick="NickServ">
+<mkpasswd operonly="no">
+<pbkdf2 iterations="12288"
+        length="32">
+<permchanneldb filename="permchannels"
+               listmodes="yes"
+               operonly="yes"
+               saveperiod="5s"
+               backoff="2"
+               maxbackoff="5m"
+               writeversion="2">
+<randquote file="quotes"
+           prefix=""
+           suffix="">
+<stdregex type="ecmascript">
+<remove protectedrank="50000"
+        supportnokicks="yes">
+<repeat extended="yes"
+        message="重复的洪水 (触发器是 %lines% 中的消息 %duration%)"
+        maxbacklog="20"
+        maxdistance="50"
+        maxlines="20"
+        maxtime="1h"
+        size="512">
+<restrictchans allowregistered="yes">
+<rline engine=""
+       matchonnickchange="no"
+       zlineonmatch="no">
+<securelist exemptregistered="yes"
+            showmsg="yes"
+            waittime="60s"
+            hidesmallchans="2"
+            fakechans="5"
+            fakechanprefix="#"
+            fakechantopic="虚假渠道混淆垃圾邮件机器人">
+<servicesintegration accountoverrideshold="yes"
+                     disablemodes="no">
+<hostname charmap="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.-_/0123456789">
+<setname notifyopers="yes"
+         operonly="no">
+<showfile name="RULES"
+          file="rules"
+          introtext="服务器规则:"
+          endtext="服务器规则结束.">
+<showwhois opersonly="yes">
+<shun affectopers="no"
+      allowconnect="yes"
+      allowtags="no"
+      cleanedcommands="AWAY PART QUIT"
+      enabledcommands="ADMIN PING PONG QUIT"
+      notifyuser="yes">
+<silence exemptservice="yes"
+         maxentries="32">
+<starttls provider="">
+<timedbans sendnotice="yes">
+<watch maxwatch="32">
+<xlinedb filename="xline"
+         saveperiod="5s"
+         backoff="2"
+         maxbackoff="5m">
 
 ######TLS/SSL模块
 #<include file="&ConfPath;/ssl.conf">
