--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -245,7 +245,7 @@
 # 官方网站MODULES页面下普通模块
 
 
-######启用模块
+######启用模组
 <module name="abbreviation">
 <module name="account">
 <module name="alias">
@@ -413,7 +413,7 @@
 #<module name="websocket">
 <module name="xline_db">
 
-######模块配置
+######模块模组
 <auditorium opcansee="no"
             opvisible="no"
             opercansee="yes">
