--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -41,7 +41,7 @@
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
 <admin name="ARKFUTURE-IRC/WG"
        description="Server admin|服务器超级管理"
-       email="">
+       email="ARKFUTURE@FOXMAIL.COM">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -380,7 +380,7 @@
 <module name="sanick">
 <module name="sapart">
 <module name="saquit">
-<module name="sasl">
+#<module name="sasl">
 <module name="satopic">
 <module name="securelist">
 <module name="seenicks">
@@ -414,6 +414,8 @@
 <module name="xline_db">
 
 ######模块模组
+<anticaps lowercase="abcdefghijklmnopqrstuvwxyz"
+          uppercase="ABCDEFGHIJKLMNOPQRSTUVWXYZ">
 <auditorium opcansee="no"
             opvisible="no"
             opercansee="yes">
@@ -432,8 +434,8 @@
              maxduration="4w"
              maxlines="50"
              prefixmsg="yes">
-<chanlog channel=""
-         snomasks="">
+<chanlog channel="#chanlog"
+         snomasks="cq">
 <channames allowrange=""
            denyrange="">
 <codepage name="ASCII"
