--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -332,7 +332,7 @@
 #<module name="ircv3_sts">
 <module name="joinflood">
 <module name="kicknorejoin">
-<module name="knock">
+#<module name="knock">
 #<module name="ldapauth">
 #<module name="ldapoper">
 #<module name="log_sql">
