--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -85,18 +85,17 @@
 #-#-#-#-#-#-#-#-#-#-#-#-操作员配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<class>标签定义了一组服务器操作员特权.此标记可以根据需要定义多次
 <class name="Shutdown"
-       commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE">
-       #privs="channels/auspex servers/auspex users/auspex users/channel-spy users/flood/increased-buffers users/flood/no-fakelag users/flood/no-throttle users/mass-message">
+       commands="DIE RESTART REHASH LOADMODULE UNLOADMODULE RELOADMODULE GLOADMODULE GUNLOADMODULE GRELOADMODULE">
 <class name="SACommands" 
        commands="SAJOIN SAPART SANICK SAQUIT SATOPIC SAKICK SAMODE OJOIN">
 <class name="ServerLink"
-       commands="CONNECT SQUIT RCONNECT RSQUIT MKPASSWD">
+       commands="CONNECT SQUIT RCONNECT RSQUIT MKPASSWD ALLTIME SWHOIS">
 <class name="BanControl"
-       commands="KILL GLINE KLINE ZLINE QLINE ELINE">
+       commands="KILL GLINE KLINE ZLINE QLINE ELINE TLINE RLINE CHECK NICKLOCK NICKUNLOCK SHUN CBAN">
 <class name="OperChat"
-       commands="WALLOPS GLOBOPS SETIDLE SPYLIST SPYNAMES">
+       commands="WALLOPS GLOBOPS">
 <class name="HostCloak"
-       commands="SETHOST SETIDENT CHGNAME CHGHOST CHGIDENT">
+       commands="SETHOST SETIDENT SETIDLE CHGNAME CHGHOST CHGIDENT">
 
 #<type>标签定义了服务器操作员的类型.此标记可以根据需要定义多次.
 # 这里必要的话请限制登录主机 "host" 字段
@@ -332,7 +331,7 @@
 #<module name="ircv3_sts">
 <module name="joinflood">
 <module name="kicknorejoin">
-#<module name="knock">
+<module name="knock">
 #<module name="ldapauth">
 #<module name="ldapoper">
 #<module name="log_sql">
