--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -239,12 +239,12 @@
 <badnick nick="MemoServ" reason="为网络服务保留">
 
 
-#-#-#-#-#-#-#-#-#-#-#-#-#MOD(模组)#-#-#-#-#-#-#-#-#-#-#-#
+#-#-#-#-#-#-#-#-#-#-#-#-#MOD(模块)#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读https://docs.inspircd.org/4/modules/
 # 官方网站MODULES页面下普通模块
 
 
-######启用模组
+######启用模块
 <module name="abbreviation">
 <module name="account">
 <module name="alias">
@@ -412,7 +412,7 @@
 #<module name="websocket">
 <module name="xline_db">
 
-######模块模组
+######模块配置
 <anticaps lowercase="abcdefghijklmnopqrstuvwxyz"
           uppercase="ABCDEFGHIJKLMNOPQRSTUVWXYZ">
 <auditorium opcansee="no"
