--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -279,7 +279,7 @@
 <module name="cloak_sha256">
 <module name="cloak_static">
 <module name="cloak_user">
-<module name="codepage">
+#<module name="codepage">
 <module name="commonchans">
 <module name="conn_join">
 <module name="conn_umodes">
