--- a/ARKFUTURE/CONF/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONF/inspircd/conf/opers.conf
@@ -21,10 +21,11 @@
 #      swhois=如果已定义，则定义一个自定义行以添加到服务器操作员的WHOIS响应>
 
 
-<oper name="arkfutureadmin"
+<oper name="arkfuture"
       password="P03iZjRtmpqXPv3"
       hash=""
       host="*@*"
       autologin="strict"
       type="NetAdmin"
-      vhost="iadm.arkfuture.cn">
+      class="ServerOperators"
+      vhost="">
