--- a/ARKFUTURE/CONF/inspircd/conf/ssl.conf
+++ b/ARKFUTURE/CONF/inspircd/conf/ssl.conf
@@ -14,21 +14,21 @@
       sslprofile="Servers"
       type="servers">
 
-#在 OPENSSL GNUTLS 两者中选一个,另一个请删除
+#在 OPENSSL GNUTLS  两者中选一个,另一个请删除&CaPath;/
 ## OPENSSL
 <module name="ssl_openssl">
 <openssl onrehash="yes">
 <sslprofile name="Clients"
             provider="openssl"
-            cafile="/etc/inspircd/ca/ca.pem"
-            certfile="/etc/inspircd/ca/cert.pem"
+            cafile="&CaPath;/ca.pem"
+            certfile="&CaPath;/cert.pem"
             crlfile=""
             ciphers="DEFAULT"
             compression="no"
-            dhfile="/etc/inspircd/ca/dhparams.pem"
+            dhfile="&CaPath;/dhparams.pem"
             ecdhcurve="prime256v1"
             hash="sha256"
-            keyfile="/etc/inspircd/ca/key.pem"
+            keyfile="&CaPath;/key.pem"
             renegotiation="no"
             requestclientcert="yes"
             tlsv1="no"
