--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -25,6 +25,8 @@
         value="&dir.config;/conf">
 <define name="TxtPath"
         value="&dir.config;/txt">
+<define name="CaPath"
+        value="&dir.config;/ca">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -34,7 +36,7 @@
         description="ARKFUTURE-IRC"
         network="ARKFUTURE"
         id="1AF">
-# ARKFUTURE irc id从1AF开始,依次往后推到9AF;0AF作为特别id
+# ARKFUTURE irc id从1AF开始,依次往后推到9AF;0AF作为特别ID
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -103,17 +105,17 @@
        classes="OperChat SACommands BanControl HostCloak Shutdown ServerLink"
        host=""
        autologin="strict"
-       vhost="iadm.arkfuture.cn">
+       vhost="">
 <type name="GlobalOp"
        classes="OperChat BanControl HostCloak ServerLink"
        host=""
        autologin="strict"
-       vhost="igop.arkfuture.cn">
+       vhost="">
 <type name="Helper"
        classes="HostCloak"
        host=""
        autologin="strict"
-       vhost="ihep.arkfuture.cn">
+       vhost="">
 
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
 # 这里必要的话请限制登录主机 "host" 字段
@@ -437,8 +439,6 @@
          snomasks="cq">
 <channames allowrange=""
            denyrange="">
-<codepage name="ASCII"
-          charset="ASCII">
 <cloak method="account"
        class=""
        invalidchar="strip"
@@ -510,7 +510,7 @@
 <ojoin notice="yes"
        op="yes"
        prefix="!OP!">
-<operjoin channel="#OP_OP"
+<operjoin channel="#OP_OP_OP_OP"
           override="yes">
 <operlog tosnomask="no">
 <override noisy="no"
