--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -41,8 +41,8 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
-<admin name="ARKFUTURE-IRC/WG"
-       description="Server admin|服务器超级管理"
+<admin name="arkfuture"
+       description="ARKFUTURE-IRC/WG|Nick:arkfuture"
        email="ARKFUTURE@FOXMAIL.COM">
 
 
@@ -52,7 +52,7 @@
 <bind address=""
       port="6667-6669"
       type="clients"
-      defer="0s"
+      defer="1s"
       free="yes">
 
 
