--- a/ARKFUTURE/CONF/inspircd/conf/opers.conf
+++ b/ARKFUTURE/CONF/inspircd/conf/opers.conf
@@ -21,7 +21,7 @@
 #      swhois=如果已定义，则定义一个自定义行以添加到服务器操作员的WHOIS响应>
 
 
-<oper name="arkfuture"
+<oper name="arkfutureadmin"
       password="P03iZjRtmpqXPv3"
       hash=""
       host="*@*"
