--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -543,7 +543,7 @@
         maxlines="20"
         maxtime="1h"
         size="512">
-<restrictchans allowregistered="yes">
+<restrictchans allowregistered="no">
 <rline engine=""
        matchonnickchange="no"
        zlineonmatch="no">
