--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -371,7 +371,7 @@
 <module name="regex_stdlib">
 <module name="remove">
 <module name="repeat">
-<module name="restrictchans">
+#<module name="restrictchans">
 <module name="restrictmsg">
 <module name="rline">
 <module name="rmode">
