--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -240,11 +240,20 @@
 <badnick nick="OperServ" reason="为网络服务保留">
 <badnick nick="MemoServ" reason="为网络服务保留">
 
+#<badip>标签定义了永久Z线.此标记可以根据需要定义多次.
+<badip ipmask="127.0.0.1" reason="为防止攻击保留">
+
+#<badhost>标签定义了永久K线.此标记可以根据需要定义多次.
+<badhost host="*@localhost" reason="为防止攻击保留">
+
+#<maxlist>标签的定义数量的清单模式，可以建立在一个通道
+<maxlist chan="*"
+         limit="10000">
+
 
 #-#-#-#-#-#-#-#-#-#-#-#-#MOD(模块)#-#-#-#-#-#-#-#-#-#-#-#
 # 请阅读https://docs.inspircd.org/4/modules/
 # 官方网站MODULES页面下普通模块
-
 
 ######启用模块
 <module name="abbreviation">
