--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -392,7 +392,7 @@
 <module name="saquit">
 #<module name="sasl">
 <module name="satopic">
-<module name="securelist">
+#<module name="securelist">
 <module name="seenicks">
 <module name="serverban">
 <module name="services">
