--- a/ARKFUTURE/CONF/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONF/inspircd/inspircd.conf
@@ -54,6 +54,9 @@
       type="clients"
       defer="1s"
       free="yes">
+<bind address=""
+      port="7000,7001"
+      type="servers">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -290,7 +293,7 @@
 <module name="cloak_sha256">
 <module name="cloak_static">
 <module name="cloak_user">
-#<module name="codepage">
+<module name="codepage">
 <module name="commonchans">
 <module name="conn_join">
 <module name="conn_umodes">
@@ -448,6 +451,9 @@
          snomasks="cq">
 <channames allowrange=""
            denyrange="">
+<codepage name="ascii"
+          charset="ascii">
+<include file="&ConfPath;/ascii.conf">
 <cloak method="account"
        class=""
        invalidchar="strip"
@@ -496,7 +502,6 @@
 <include file="&ConfPath;/helpop.conf">
 <helpmode ignorehideoper="no"
           markhelpers="yes">
-<hidechans affectsopers="no">
 <inviteexception bypasskey="yes">
 <ircv3 accountnotify="yes"
        awaynotify="yes"
@@ -591,9 +596,15 @@
 ######TLS/SSL模块
 #<include file="&ConfPath;/ssl.conf">
 
+
 #-#-#-#-#-#-#-#-#-#-#-#-#LOG(日志)#-#-#-#-#-#-#-#-#-#-#-#
 <log method="file"
      type="*"
      level="normal"
      target="&ConfPath;/ircd.log"
      flush="1000">
+
+
+#-#-#-#-#-#-#-#-#-#IRC Services(IRC 服务)-#-#-#-#-#-#-#-#
+
+
